# my-Projects

./: README.md
Quizprojekt_Leon/: Program.cs  Quizprojekt_Leon.csproj  Quizprojekt_Leon.sln  Scores.json
Quizprojekt_Leon/Docs/: Documentation.md
Wordle_project/: pyproject.toml
Wordle_project/instance/: wordL.sqlite
Wordle_project/wordL/: __init__.py  account.py  auth.py  db.py  requirements.txt  schema.sql  scoreboard.py  vercel.json  wordle.py
Wordle_project/wordL/resources/: shuffled_real_wordles.txt
Wordle_project/wordL/static/: style.css
Wordle_project/wordL/templates/: base.html
Wordle_project/wordL/templates/account/: edit.html  profile.html  upload.html
Wordle_project/wordL/templates/auth/: register.html
Wordle_project/wordL/templates/main/: scoreboard.html  start.html
pokedex/: package-lock.json  package.json
pokedex/src/routes/: +layout.svelte  +page.svelte
pokedex/src/routes/[id]/: +page.js  +page.svelte
pokedex/src/routes/about/: +page.svelte
pokedex/src/routes/components/: PokemanCard.svelte  nav.svelte
pokedex/src/stores/: pokestores.js
