[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WordL"
version = "1.0"
authors = [
  { name="Ommel", email="leon.koerber@gmail.com" },
]
description = "A small Wordle-like game"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"